--- a/src/style/Chat.css
+++ b/src/style/Chat.css
@@ -6,10 +6,11 @@
 }
 
 .chat-main {
-  width: 80%;
+  width: 100%;
   height: 70vh;
   border: 1px solid blue;
   overflow-y: auto;
+  margin: 0 auto;
 }
 
 .message__user {
@@ -19,9 +20,20 @@
   margin-left: auto;
   width: fit-content;
 }
+
 .message__other {
   border: 2px solid rgb(23, 0, 173);
   border-radius: 5px;
   margin: 10px;
   width: fit-content;
+}
+
+.message__name {
+  margin: 4px;
+  margin-top: 10px;
+}
+
+.message__text {
+  font-size: 20px;
+  margin: 3px;
 }
